--- a/index.html
+++ b/index.html
@@ -11,16 +11,45 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
   </head>
 
-  <body>
+  <body class="text-center">
+    <div class="cover-container d-flex p-3 mx-auto flex-column">
+  <header class="masthead mb-auto">
+    <div class="inner">
+      <h3 class="masthead-brand">Nature Unlimited</h3>
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <h1>Week 6, Part 1</h1>
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">Stunning Photography</h1>
+    <p class="lead">Each pixel is worth a thousand words.</p>
 
-	</body>
 
+<!--from mdn example-->
+<div class="full-img">
+  <img class="displayed-img" src="images/pic1.jpg">
+  <div class="overlay"></div>
+  <button class="dark">Darken</button>
+</div>
+
+<div class="thumb-bar">
+</div>
+  </main>
+
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p>&copy;Nature Unlimited, LLC</p>
+    </div>
+  </footer>
+</div>
+</body>
 </html>
